# DeCo-Diff.nix

./: .envrc  .gitignore  LICENSE  MVTECDataLoader.py  README.md  VISADataLoader.py  develop.nix  evaluation_DeCo_Diff.py  flake.nix  models.py  pythonSet.nix  requirements.txt  train_DeCo_Diff.py
apps/: default.nix
diffusion_temp/: __init__.py  gaussian_diffusion.py
project/: PCBDataLoader.py  README.md  evaluation_DeCo_Diff.py  models.py  pyproject.toml  train_DeCo_Diff.py
project/diffusion/: __init__.py  gaussian_diffusion.py  respace.py
project/ldm/modules/diffusionmodules/: openaimodel.py
splits/: mvtec-split.csv  pcb-split.csv
